--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -5,20 +5,18 @@
 }
 
 body{
-    width: 40%;
+    width: 100%;
     font-family: "Roboto";
     font-size: 12px;
     border-color: none;
     display: flex;
-    background-color: #ebebeb;
     margin: 30%;
     align-items: center;
 }
 
 .content-nav{
-    flex-wrap: wrap;
-    flex-direction: column;
-    
+    padding: 20px;
+    background-color: #ebebeb;
 }
 h1{
     margin-top:15px; 
@@ -29,6 +27,7 @@ h1{
     margin-top:15px; 
     height: 100%;
     width: fit-content;
+    background-color: none;
 }
 
 .buttom-send{
