realice cambios de estilo

--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -4,20 +4,46 @@
     box-sizing: border-box;
 }
 
+html{
+    height: 100%;
+}
+
 body{
-    width: 40%;
+    width: 100%;
     font-family: "Roboto";
     font-size: 12px;
     border-color: none;
     display: flex;
-    background-color: #ebebeb;
-    margin: 30%;
+    justify-content: center;
     align-items: center;
+    min-height: 50%;
 }
+
+form {
+    width: 60%;
+    padding: 3%;
+    background-color: #ebebeb;
+}
+
 .content-register{
     font-size: 12px;
     color: #666;
-    margin-top:15px; 
+    margin-top:20px; 
     height: 100%;
-    width: fit-content;
+}
+
+input{
+width: 80%;
+padding:2%;
+border: none;
+}
+
+.button-send button{
+    width: 80%;
+    margin-top:15px; 
+    background-color:#1259c3;
+    border-radius: 4%;
+    padding: 5px;
+    color: white;
+    border: none;
 }
