--- a/src/views/login.html
+++ b/src/views/login.html
@@ -8,23 +8,22 @@
     <title>Login</title>
 </head>
 <body>
-
     <form action="/home.html" method="post">
         
         <div class="content-register">
             <label for="txfuser"></label>
-             <input type="text" name="NombreUsuario" id="txfuser" placeholder="Nombre de usuario">
+            <input type="text" name="NombreUsuario" id="txfuser" placeholder="Nombre de usuario">
         </div>
-
+        
         <div class="content-register">
             <label for="txfpassword"></label>
-                <input type="password" name="password" id="txfpassword" placeholder="Elegi tu contraseña">
-         </div>
-
-         <div class="content-register">
-        <button type="submit">Enviar</button>
-    </div>
-    
+            <input type="password" name="password" id="txfpassword" placeholder="Elegi tu contraseña">
+        </div>
+        
+        <div class="button-send">
+            <button type="submit">Enviar</button>
+        </div>
+        
     </form>
 </body>
 </html>
