--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -4,24 +4,36 @@
     box-sizing: border-box;
 }
 
+html{
+    height: 100%;
+}
+
 body{
     width: 100%;
     font-family: "Roboto";
     font-size: 12px;
     border-color: none;
     display: flex;
-    margin: 30%;
+    justify-content: center;
     align-items: center;
+    min-height: 83%;
 }
 
 .content-nav{
-    padding: 20px;
+    padding: 5%;
     background-color: #ebebeb;
 }
 h1{
-    margin-top:15px; 
+    margin-top:15px;
 }
+
+.radio-button{
+padding: 2%;
+justify-content: space-between;
+}
+
 .content-register{
+    border: none;
     font-size: 12px;
     color: #666;
     margin-top:15px; 
@@ -30,6 +42,11 @@ h1{
     background-color: none;
 }
 
-.buttom-send{
+.button-send button{
+    margin-top:15px; 
     background-color:#1259c3;
+    border-radius: 10%;
+    padding: 5px;
+    color: white;
+    border: none;
 }
