--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -36,13 +36,14 @@ input{
 width: 80%;
 padding:2%;
 border: none;
+border-radius: 5px;
 }
 
 .button-send button{
     width: 80%;
     margin-top:15px; 
     background-color:#1259c3;
-    border-radius: 4%;
+    border-radius: 5px;
     padding: 5px;
     color: white;
     border: none;
