--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -45,7 +45,7 @@ justify-content: space-between;
 .button-send button{
     margin-top:15px; 
     background-color:#1259c3;
-    border-radius: 10%;
+    border-radius: 5px;
     padding: 5px;
     color: white;
     border: none;
